--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,7 @@ body{
     background-size: cover; 
     background-repeat: no-repeat;
     height: 100vh;
+    width: 100vw;
 }
 h1{
     border-bottom: 2px solid white;
@@ -81,13 +82,18 @@ input, .searchButton {
   }
 
   .output{
-    
-    position: absolute;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    width: 95vw;
+    gap: 30px;
+    /* position: absolute;
     top: 50%;
     transition: top 1s ease;
     left: 50%;
-    transform: translate(-50%,-50%);
-    min-width: 20%;
+    transform: translate(-50%,-50%); */
+    
     
   }
 
@@ -112,6 +118,25 @@ input, .searchButton {
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
 }
+.data{
+  background-color: white;
+  
+  flex: 1;
+  
+}
+.preview {
+  display: none;
+  width:50%S;
+  height: 50%; 
+  overflow: hidden; 
+  flex: 1;
+}
+.preview img {
+
+  width: 100%; 
+  height: 100%; 
+  object-fit: cover; 
+}
 @keyframes glideFromRight {
     0% {
       transform: translateX(100%);
@@ -125,6 +150,4 @@ input, .searchButton {
   .data.glide-from-right {
     animation: glideFromRight 1s ease-out;
   }
-  .data{
-    background-color: white;
-  }
+  
